# SimpleLogAnalyzer

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
include/: logAnalyzer.h
src/: logAnalyzer.cpp
tests/: test_log_analyzer.cpp
